--- a/CSS/Week - Six/Class 12/index.html
+++ b/CSS/Week - Six/Class 12/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Display (Flex and Direction) -->
+    <!-- <div class="container">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div> -->
+
+    <!-- Flex Direction (Rows and Column Reverse) -->
+
+    <!-- <div class="container">
+      <div class="box1"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box2"></div>
+    </div> -->
+
+    <!-- Flex Wrap -->
+
+    <!-- <div class="container">
+      <div class="box1"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box2"></div>
+    </div> -->
+
+    <!-- Justify Content -->
+
+    <!-- <div class="container">
+      <div class="box1"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box2"></div>
+    </div> -->
+
+    <!--  Flex Page Break  -->
+    <!-- <div class="container">
+      <div class="box1"></div>
+      <div class="box"></div>
+      <div class="box2"></div>
+    </div> -->
     
-</body>
+  </body>
 </html>
