--- a/JavaScript/Week - Eight/Class 15/index.html
+++ b/JavaScript/Week - Eight/Class 15/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="app.js"></script>
+    <h1>Assignment Submission</h1>
+    <a href="https://astonishing-jelly-577f3e.netlify.app/"> Live Link</a><br>
+    <a href="https://github.com/AunAbbas930/JS-Assignment-05-02-2024-">My Github Repository</a>
+    <p>Aun Abbas, Bano Qabil 2.0 (1601)</p>
   </body>
 </html>
