Stop Watch Created

--- a/JavaScript/Week - Ten/Class 19/index.html
+++ b/JavaScript/Week - Ten/Class 19/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- <button onclick="stopTimer()">STOP!</button> -->
+    <div class="parent">
+      <div id="min">00</div>
+      <div id="sec">00</div>
+      <div id="msec">00</div>
+    </div>
+
+    <div class="btnparent">
+      <button onclick="startTimer(this)">START</button>
+      <button onclick="stopTimer()">STOP</button>
+      <button onclick="resetTimer()">RESET</button>
+    </div>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
