--- a/JavaScript/Week - Eleven/Class 20/index.html
+++ b/JavaScript/Week - Eleven/Class 20/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="my-element">Click Me</button>
+    <!-- <button id="my-element">Click Me</button> -->
+
+    <!-- Text Expand -->
+    <p id="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+    <a id="link" href="Javascript:void(0)" onclick="expandText()">See more</a>
 
     <script src="app.js"></script>
   </body>
