--- a/JavaScript/Week - Eleven/Class 21/index.html
+++ b/JavaScript/Week - Eleven/Class 21/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- Practical Example of Closures -->
+    <!-- <button id="size-12">12</button>
+    <button id="size-14">14</button>
+    <button id="size-16">16</button> -->
     <script src="app.js"></script>
   </body>
 </html>
