--- a/JavaScript/Week - Eleven/Class 21/index.html
+++ b/JavaScript/Week - Eleven/Class 21/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Practical Example of Closures -->
     <!-- <button id="size-12">12</button>
     <button id="size-14">14</button>
     <button id="size-16">16</button> -->
+
+    <!-- Fetch API EXAMPLE -->
+    <h2>Using the <i> fetch() browser method </i> to fetch data from API</h2>
+    <div id="output"></div>
+    <button onclick="fetchData()">Fetch API to get data</button>
+
     <script src="app.js"></script>
   </body>
 </html>
