--- a/JavaScript/Week - Eleven/Class 21/index.html
+++ b/JavaScript/Week - Eleven/Class 21/index.html
@@ -13,9 +13,9 @@
     <button id="size-16">16</button> -->
 
     <!-- Fetch API EXAMPLE -->
-    <h2>Using the <i> fetch() browser method </i> to fetch data from API</h2>
+    <!-- <h2>Using the <i> fetch() browser method </i> to fetch data from API</h2>
     <div id="output"></div>
-    <button onclick="fetchData()">Fetch API to get data</button>
+    <button onclick="fetchData()">Fetch API to get data</button> -->
 
     <script src="app.js"></script>
   </body>
