--- a/JavaScript/Week - Twelve/Weather App/index.html
+++ b/JavaScript/Week - Twelve/Weather App/index.html
@@ -12,6 +12,9 @@
         <input type="text" placeholder="enter city name" spellcheck="false" />
         <button><img src="images/search.png" alt="" /></button>
       </div>
+      <div class="error">
+        <p>Invalid city name</p>
+      </div>
       <div class="weather">
         <img src="images/rain.png" class="weather-icon" />
         <h1 class="temp">22°C</h1>
